--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite build --watch & vite preview",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Thierry Charbonnel",
   "dependencies": {
@@ -13,6 +14,7 @@
     "@penpot/plugin-types": "0.8.0"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   },
