--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "QRcode",
-  "host": "http://localhost:4400",
+  "host": "https://thierryc.github.io/qrcode-penpot-plugin/",
   "code": "plugin.js",
   "description": "QR code generator plugin for Penpot by thierryc on github.com",
-  "icon": "./icon.png",
+  "icon": "icon.png",
   "permissions": [
     "content:read",
     "content:write"
