--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "qr-code-penpot-plugin",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite build --watch & vite preview",
     "build": "tsc && vite build",
-    "deploy": "gh-pages -d dist"
+    "gh-pages": "gh-pages -d doc"
   },
   "author": "Thierry Charbonnel",
   "dependencies": {
